# dancespiele_api

./: .gitignore  Cargo.toml  README.md  diesel.toml
refinery_migrations/: Cargo.toml
refinery_migrations/src/: main.rs
refinery_migrations/src/migrations/: create_auth.rs  create_role.rs  create_token_type.rs  create_user.rs  create_user_role.rs  create_user_token.rs  helpers.rs  mod.rs
src/: db.rs  main.rs  schema.rs.example  sql_types.rs
src/error/: dtos.rs  error_handler.rs  mod.rs
src/guard/: dtos.rs  filters.rs  guard_handlers.rs  helpers.rs  mod.rs  models.rs
src/mailing/: dtos.rs  filters.rs  helpers.rs  mail_handlers.rs  mod.rs
src/percentages/: filters.rs  mod.rs  models.rs  percentages_handlers.rs
src/tasks/: consumer.rs  mod.rs
src/tasks/mailing/: dtos.rs  helpers.rs  mail_task.rs  mod.rs
src/user/: dtos.rs  filters.rs  helpers.rs  mod.rs  models.rs  user_handlers.rs
static/: base.html
static/email_templates/: stop_loss.html
static/email_templates/en/: stop_loss.html
static/email_templates/es/: base.html  stop_loss.html
