[package]
name = "dancespiele_api"
version = "0.1.0"
authors = ["spieljs <spieljs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
dotenv = "0.15"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync"]}
bcrypt= "0.9"
jsonwebtoken = "7.2"
chrono = {version="0.4", features= ["serde", "rustc-serialize"]}
serde = { version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
sled = "0.34"
mailgun_api = "0.2"
pretty_env_logger = "0.4"
log = "0.4"
reqwest= "0.10"
tera="1.5"
celery="0.3"